Fix modal header alignment if parent is centered (#10607)
* Fix Modal Header text-align, if parent container is centered

* Fix modal header alignment

--- a/administrator/templates/isis/css/template-rtl.css
+++ b/administrator/templates/isis/css/template-rtl.css
@@ -8288,6 +8288,9 @@ body.modal-open {
 .modal-footer {
 	clear: both;
 }
+.modal-header {
+	text-align: left;
+}
 .pull-right {
 	float: left;
 }
@@ -9105,4 +9108,7 @@ a.grid_true {
 }
 .modal-footer button {
 	float: left;
+}
+.modal-header {
+	text-align: right;
 }
